--- a/server/views/pages/offence/offence-name.njk
+++ b/server/views/pages/offence/offence-name.njk
@@ -5,7 +5,7 @@
 {% set pageTitle = applicationName + " - Look up offence by name" %}
 
 {% block pageContent %}
-            <form method="post">
+            <form method="post" autocomplete="off">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% include "../../partials/offenceCaption.njk" %}
 
