--- a/server/views/pages/overallSentencing/check-overall-answers.njk
+++ b/server/views/pages/overallSentencing/check-overall-answers.njk
@@ -140,7 +140,7 @@
 
 
     <div class="govuk-button-group govuk-!-margin-top-8">
-        <form method="post">
+        <form method="post" autocomplete="off">
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
             <div class="govuk-button-group">
