--- a/server/views/pages/sentenceTypes/legacy.njk
+++ b/server/views/pages/sentenceTypes/legacy.njk
@@ -51,7 +51,7 @@
 
     <div id="filters-panel" hidden class="govuk-!-padding-2 govuk-!-margin-bottom-2 govuk-border--1px">
 
-        <form method="get" class="govuk-form-group govuk-!-margin-bottom-1 govuk-!-display-inline">
+        <form method="get" class="govuk-form-group govuk-!-margin-bottom-1 govuk-!-display-inline" autocomplete="off">
             <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                     Show only sentence types that match:
