--- a/server/views/pages/courtAppearance/delete-appearance.njk
+++ b/server/views/pages/courtAppearance/delete-appearance.njk
@@ -10,7 +10,7 @@
     {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ appearanceReference }}/submit-delete-appearance">
+            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ appearanceReference }}/submit-delete-appearance" autocomplete="off">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
 
                 {% call govukFieldset({
