--- a/server/views/pages/courtAppearance/next-hearing-court-select.njk
+++ b/server/views/pages/courtAppearance/next-hearing-court-select.njk
@@ -11,7 +11,7 @@
     {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
-            <form method="post">
+            <form method="post" autocomplete="off">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% include "../../partials/nextAppearanceCaption.njk" %}
                 {{ govukRadios({
