--- a/server/views/pages/offence/offence-date.njk
+++ b/server/views/pages/offence/offence-date.njk
@@ -11,7 +11,7 @@
 {% endif %}
 
 {% block pageContent %}
-            <form method="post">
+            <form method="post" autocomplete="off">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% include "../../partials/offenceCaption.njk" %}
 
