--- a/server/views/pages/sentencing/sentence-consecutive-to.njk
+++ b/server/views/pages/sentencing/sentence-consecutive-to.njk
@@ -36,14 +36,14 @@
                 <div class="govuk-radios" data-module="govuk-radios" data-govuk-radios-init="">
 
                     {% if sentencesOnSameCase.length %}
-                        <h2 class="govuk-heading-m">Sentences on this case</h2>
+                        <h2 class="govuk-heading-m" data-qa="sentencesOnSameCaseHeader">Sentences on this case</h2>
                         {% for sentence in sentencesOnSameCase | sortByCountNumber %}
                             <div class="govuk-radios__item">
                                 <input class="govuk-radios__input"
                                        id="consecutiveToSentenceUuid{{ '-' + radioIdIndex if radioIdIndex > 0 else '' }}"
                                        name="consecutiveToSentenceUuid" type="radio"
-                                       {% if sentenceConsecutiveToForm.consecutiveToSentenceUuid == (sentence.sentenceReference + '|SAME') %}checked{% endif %}
-                                       value="{{ sentence.sentenceReference }}|SAME">
+                                       {% if sentenceConsecutiveToForm.consecutiveToSentenceUuid == sentence.sentenceUuid %}checked{% endif %}
+                                       value="{{ sentence.sentenceUuid }}">
                                 <label class="govuk-label govuk-radios__label"
                                        for="consecutiveToSentenceUuid{{ '-' + radioIdIndex if radioIdIndex > 0 else '' }}">
                                     {% if sentence.countNumber and sentence.countNumber !== '-1' %}
@@ -73,8 +73,8 @@
                                         <input class="govuk-radios__input"
                                                id="consecutiveToSentenceUuid{{ '-' + radioIdIndex if radioIdIndex > 0 else '' }}"
                                                name="consecutiveToSentenceUuid" type="radio"
-                                               {% if sentenceConsecutiveToForm.consecutiveToSentenceUuid == (sentence.sentenceUuid + '|OTHER') %}checked{% endif %}
-                                               value="{{ sentence.sentenceUuid }}|OTHER">
+                                               {% if sentenceConsecutiveToForm.consecutiveToSentenceUuid == sentence.sentenceUuid %}checked{% endif %}
+                                               value="{{ sentence.sentenceUuid }}">
                                         <label class="govuk-label govuk-radios__label"
                                                for="consecutiveToSentenceUuid{{ '-' + radioIdIndex if radioIdIndex > 0 else '' }}">
                                             {% if sentence.countNumber and sentence.countNumber !== '-1' %}
