RASS-1307-Design Inconsistency: Update outcome wording

--- a/server/views/pages/courtAppearance/case-outcome-applied-all.njk
+++ b/server/views/pages/courtAppearance/case-outcome-applied-all.njk
@@ -4,7 +4,7 @@
 
 {% set pageTitle = applicationName + " - Add a court case Outcome applied to all" %}
 {% set fieldSetHtml %}
-    <h1 class="govuk-fieldset__heading govuk-!-static-margin-bottom-3">Is the outcome the same for all offences on the warrant?</h1>
+    <h1 class="govuk-fieldset__heading govuk-!-static-margin-bottom-3">Does this outcome apply to all offences on the warrant?</h1>
     <p class="govuk-body-l govuk-!-static-margin-bottom-3">{{ overallCaseOutcome }}</p>
 {% endset %}
 {% block content %}
