--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -88,7 +88,7 @@
         },
         {
             key: {
-                text: "Is the outcome the same for all offences on the warrant?"
+                text: "Does this outcome apply to all offences on the warrant?"
             },
             value: {
                 text: "Yes" if courtAppearance.caseOutcomeAppliedAll == 'true' else "No"
