RASS-942-visited-link-are-blue

--- a/assets/scss/overrides/_local.scss
+++ b/assets/scss/overrides/_local.scss
@@ -42,3 +42,10 @@
 .moj-timeline__document-icon {
   fill: #1d70b8;
 }
+
+.govuk-main-wrapper a:visited,
+.govuk-template a:visited,
+#main-content a:visited {
+  color: #1d70b8 !important;
+}
+
