--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -41,19 +41,19 @@
                     key: {
                         text: "Outcome"
                     }, value: {
-                        html: '<a href="/person/' + nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + chargeUuid + '/offence-outcome?submitToEditOffence=true" data-qa="edit-sentence-type-cta">Enter outcome</a>'
+                        html: '<a href="/person/' + nomsId + '/' + addOrEditCourtCase + '/' + courtCaseReference  + '/' + addOrEditCourtAppearance + '/' + appearanceReference + '/offences/' + chargeUuid + '/update-offence-outcome?submitToEditOffence=true" data-qa="update-outcome-cta">Update outcome</a>'
                     } if showOutcomeCta else {
                         text: outcome | outcomeValueOrLegacy(offence.legacyData)
                     },
                     actions: {
-                        items: [{
+                        items: [] if showOutcomeCta else [{
                             href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + chargeUuid + "/offence-outcome?submitToEditOffence=true",
                             text: "Edit",
                             visuallyHiddenText: "outcome",
                             attributes: {
                                 'data-qa': 'edit-offence-outcome-' + chargeUuid
                             }
-                        }] if not showOutcomeCta else []
+                        }]
                     }
                 }] %}
 
